Fixes #147 - "eof" is squashed

--- a/webapp/src/main/webapp/VAADIN/themes/tori/threadview/style.css
+++ b/webapp/src/main/webapp/VAADIN/themes/tori/threadview/style.css
@@ -288,6 +288,7 @@
 	border-bottom: 2px solid #f4f4f0;
 	margin-bottom: 105px;
 	margin-top: 50px;
+	overflow: visible;
 }
 
 .threadview .spacer .eof {
